--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap; }
+
 body {
   background-image: linear-gradient(rgba(24, 224, 24, 0.74), rgba(223, 223, 79, 0.705)); }
 
@@ -38,6 +44,12 @@ body {
   -ms-grid-column: 1;
   grid-area: cabeza; }
 
+body {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(24, 224, 24, 0.74)), to(rgba(223, 223, 79, 0.705)));
+  background-image: linear-gradient(rgba(24, 224, 24, 0.74), rgba(223, 223, 79, 0.705));
+  color: black; }
 
+footer {
+  background-color: #11f02f; }
 
 /*# sourceMappingURL=main.css.map */
